# model/entity/promo_result.go
@@ -1,0 +1,7 @@
+package entity
+
+// PromoResult example
+type PromoResult struct {
+	Winner Participant `json:"winner"`
+	Prize  Prize       `json:"prize"`
+}
